--- a/src/styles/helpers.scss
+++ b/src/styles/helpers.scss
@@ -111,6 +111,10 @@
 .hidden {
   visibility: hidden;
 }
+.transparent {
+  opacity: 0;
+  transform: scale(0);
+}
 .d-none {
   display: none;
 }
